Fix little white corner between scrollbars

--- a/ElectronClient/app/style.css
+++ b/ElectronClient/app/style.css
@@ -24,6 +24,11 @@ table td, table th {
 
 ::-webkit-scrollbar {
 	width: 7px;
+	height: 7px;
+}
+
+::-webkit-scrollbar-corner {
+	background: none;
 }
 
 ::-webkit-scrollbar-track {
